grpc-gateway: new paths
